--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,10 @@ jobs:
         with:
           java-version: "17"
           distribution: "adopt"
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
 
       - name: Build with Maven (package)
-        run: make package
+        run: mvn -B package --file pom.xml
 
       - name: Publish to GitHub Packages Apache Maven
         env:
