--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ssh-key: ${{ secrets.TOKEN }}
+          token: ${{ secrets.TOKEN }}
           submodules: recursive
 
       - name: Set up JDK 17
