--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,17 +18,14 @@ jobs:
     name: Build and analyze
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
+          java-version: '17'
+          distribution: 'adopt'
           token: ${{ secrets.TOKEN }}
           submodules: recursive
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: "17"
-          distribution: "adopt"
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
 
       - name: Build with Maven (package)
         run: mvn -B package --file pom.xml -DskipTests
