--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
         with:
-          java-version: '17'
-          distribution: 'adopt'
-          token: ${{ secrets.TOKEN }}
+          token: ${{ secrets.REPO_PAT }}
           submodules: recursive
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: "17"
+          distribution: "adopt"
 
       - name: Build with Maven (package)
         run: mvn clean package spring-boot:repackage -DskipTests
