--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.REPO_PAT }}
+          token: ${{ secrets.TOKEN }}
           submodules: recursive
 
       - name: Set up JDK 17
