--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,14 @@ jobs:
 
     steps:
       - name: Set up JDK 17
-      - uses: actions/checkout@v3
+        uses: actions/setup-java@v2
         with:
-          java-version: "17"
-          distribution: "adopt"
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
           token: ${{ secrets.TOKEN }}
           submodules: recursive
 
