--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.TOKEN }}
+          token: ${{ secrets.REPO_PAT }}
           submodules: recursive
 
       - name: Build with Maven (package)
@@ -37,5 +37,5 @@ jobs:
       - name: Publish to GitHub Packages Apache Maven
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME }}
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REPO_PAT }}
         run: mvn --settings settings.xml --file pom.xml deploy -DskipTests
