--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,17 +19,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'adopt'
-
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.REPO_PAT }}
-          submodules: recursive
+          distribution: 'temurin'
 
       - name: Build with Maven (package)
         run: mvn clean package spring-boot:repackage -DskipTests
