--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Copy settings.xml
-        run: cp settings.xml $HOME/.m2/settings.xml
+        run: cp settings.xml $JAVA_HOME/.m2/settings.xml
 
       - name: Build with Maven (package)
         run: mvn clean package spring-boot:repackage -DskipTests
