--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,5 @@ jobs:
         run: mvn clean package spring-boot:repackage -DskipTests
 
       - name: Deploy to Github Package Registry
-        run: mvn --settings settings.xml --file pom.xml deploy -DskipTests
+        echo: env
+        run: mvn deploy -DskipTests
