--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,8 @@ jobs:
         run: mvn clean package spring-boot:repackage -DskipTests
 
       - name: Deploy to Github Package Registry
-        echo: env
-        run: mvn deploy -DskipTests
+        run: |
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          echo "GITHUB_ACTOR: $GITHUB_ACTOR"
+          echo "GITHUB_SHA: $GITHUB_SHA"
+          mvn deploy -DskipTests
