--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,10 @@ jobs:
         env:
           GITHUB_USERNAME: ${{ secrets.USERNAME }}
           GITHUB_TOKEN: ${{ secrets.REPO_PAT }}
-        run: cp $GITHUB_WORKSPACE/settings.xml $HOME/.m2/settings.xml
+        run: |
+          echo "USERNAME: $secrets.USERNAME"
+          echo "REPO_PAT: $secrets.REPO_PAT"
+          cp $GITHUB_WORKSPACE/settings.xml $HOME/.m2/settings.xml
 
       - name: Build with Maven (package)
         run: mvn clean package spring-boot:repackage -DskipTests
